--- a/.github/ISSUE_TEMPLATE/config.yaml
+++ b/.github/ISSUE_TEMPLATE/config.yaml
@@ -1,4 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Questions
-    about: Please ask and answer questions on Github Discussion of this repository
+    url: https://github.com/flutter-form-builder-ecosystem
+    about: Please ask and answer questions on Github Discussion of each repository
