--- a/.github/ISSUE_TEMPLATE/documentation.yaml
+++ b/.github/ISSUE_TEMPLATE/documentation.yaml
@@ -20,6 +20,9 @@ body:
     render: Markdown
   validations:
     required: false
-- type: markdown
+- type: textarea
   attributes:
-    value: '### Additional context'
+    label: Aditional information
+    placeholder: Can add images, videos, more context, etc.
+  validations:
+    required: false
