change emoji on bug issue template

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -1,4 +1,4 @@
-name: 🐞 Bug
+name: 🐛 Bug
 description: Something is crashing or not working as intended
 title: "[Field name or General]: <title>"
 labels: [bug]
