--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -20,19 +20,9 @@ jobs:
         with:
           fetch-depth: 1 # Use shallow clone for faster checkout
       - uses: dart-lang/setup-dart@v1
-
-      - name: Get Flutter version by FVM
-        uses: kuhnroyal/flutter-fvm-config-action@v2
-        id: fvm-config-action
+      - name: Setup Flutter
+        uses: kuhnroyal/flutter-fvm-config-action/setup@v3
         with:
-          path: ".fvmrc"
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ steps.fvm-config-action.outputs.FLUTTER_VERSION }}
-          channel: ${{ steps.fvm-config-action.outputs.FLUTTER_CHANNEL }}
-          architecture: x64
-          cache: true
+          path: '.fvmrc'
       - name: Publish package
         run: dart pub publish -v -f
