--- a/.github/ISSUE_TEMPLATE/documentation.yaml
+++ b/.github/ISSUE_TEMPLATE/documentation.yaml
@@ -1,6 +1,7 @@
 name: 📘 Documentation
 description: You want to report something that is wrong or missing from the documentation
 labels: [documentation]
+projects: flutter-form-builder-ecosystem/9
 type: documentation
 body:
 - type: textarea
