--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -1,6 +1,7 @@
 name: 🚀 Feature request
 description: Suggest new feature or request for this project
 title: "<Field name or General>: <title>"
+projects: flutter-form-builder-ecosystem/9
 labels: [enhancement]
 type: feature
 body:
