--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -24,5 +24,6 @@ jobs:
         uses: kuhnroyal/flutter-fvm-config-action/setup@v3
         with:
           path: '.fvmrc'
+          cache-key: "flutter-:os:-:channel:-:version:"
       - name: Publish package
         run: dart pub publish -v -f
