ci: add linux and windows build examples

--- a/.github/workflows/build-examples.yaml
+++ b/.github/workflows/build-examples.yaml
@@ -19,7 +19,7 @@ on:
   
 jobs:
   example:
-    name: Build examples by platform
+    name: Build examples for Android, iOS, MacOS and Web
     runs-on: macos-latest
     steps:
       - name: Checkout repository
@@ -51,8 +51,8 @@ jobs:
         run: |
           flutter build appbundle --debug
           flutter build ios --debug --no-codesign
-          flutter build web --base-href "/${{ github.event.repository.name }}_website/"
           flutter build macos
+          flutter build web --base-href "/${{ github.event.repository.name }}_website/"
       - name: Archive web artifacts
         if: ${{ github.ref_type == 'tag' }}
         uses: actions/upload-artifact@v4
@@ -60,3 +60,55 @@ jobs:
           name: web-app
           path: example/build/web/
           retention-days: 1
+  example-windows:
+    name: Build example on Windows
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1 # Use shallow clone for faster checkout
+      - name: Setup Flutter
+        uses: kuhnroyal/flutter-fvm-config-action/setup@v3
+        with:
+          path: '.fvmrc'
+          cache-key: "flutter-:os:-:channel:-:version:"
+          flavor: ${{ inputs.fvm-flavor }}
+      - name: Install dependencies
+        run: flutter pub get
+      - name: Run l10n
+        if: ${{ inputs.enable-generate-l10n }}
+        run: flutter gen-l10n
+      - name: Run l10n on example
+        if: ${{ inputs.enable-generate-l10n }}
+        run: flutter gen-l10n
+        working-directory: example
+      - name: Build example
+        working-directory: example
+        run: flutter build windows
+  example-linux:
+    name: Build example on Linux
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1 # Use shallow clone for faster checkout
+      - name: Setup Flutter
+        uses: kuhnroyal/flutter-fvm-config-action/setup@v3
+        with:
+          path: '.fvmrc'
+          cache-key: "flutter-:os:-:channel:-:version:"
+          flavor: ${{ inputs.fvm-flavor }}
+      - name: Install dependencies
+        run: flutter pub get
+      - name: Run l10n
+        if: ${{ inputs.enable-generate-l10n }}
+        run: flutter gen-l10n
+      - name: Run l10n on example
+        if: ${{ inputs.enable-generate-l10n }}
+        run: flutter gen-l10n
+        working-directory: example
+      - name: Build example
+        working-directory: example
+        run: flutter build linux
