--- a/.github/workflows/build-examples.yaml
+++ b/.github/workflows/build-examples.yaml
@@ -100,6 +100,10 @@ jobs:
           path: '.fvmrc'
           cache-key: "flutter-:os:-:channel:-:version:"
           flavor: ${{ inputs.fvm-flavor }}
+      - name: Install Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang cmake git ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
       - name: Install dependencies
         run: flutter pub get
       - name: Run l10n
