--- a/.github/workflows/minimal-quality.yaml
+++ b/.github/workflows/minimal-quality.yaml
@@ -36,6 +36,8 @@ jobs:
       - name: Check broken links
         id: lychee
         uses: lycheeverse/lychee-action@v2
+        with:
+          args: './**/*.md'
       - name: Setup Flutter
         uses: kuhnroyal/flutter-fvm-config-action/setup@v3
         with:
