--- a/.github/workflows/minimal-quality.yaml
+++ b/.github/workflows/minimal-quality.yaml
@@ -37,7 +37,7 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v2
         with:
-          args: './**/*.md'
+          args: "--verbose './**/*.md'"
       - name: Setup Flutter
         uses: kuhnroyal/flutter-fvm-config-action/setup@v3
         with:
